# Glacial

./: AGENTS.md  COPYRIGHT.md  README.md  RELEASE_NOTES.md
backend/app/: activity.py  changelog.py  config.py  database.py  dependency_trust.py  main.py  safety.py  scanner.py  schemas.py
backend/tests/: test_activity.py  test_agents.py  test_config.py  test_dependency_trust.py  test_dependency_trust_adversarial.py  test_project_lifecycle.py  test_scan_completeness.py  test_scanner.py
docs/: windows-release-signing.md
frontend/: package-lock.json  package.json
frontend/src/: App.integration.test.js  ProjectExpectations.jsx  activity.js  activity.test.js  apiConfig.js  apiConfig.test.js  dependencyTrust.js  dependencyTrust.test.js  guidedReview.js  guidedReview.test.js  main.jsx  projectExpectations.js  projectExpectations.test.js  projectRequests.js  projectRequests.test.js  reportMarkdown.js  reportMarkdown.test.js  sessionState.js  sessionState.test.js  styles.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
scripts/desktop/: Build-PortableDesktop.ps1  Build-SignedWindowsRelease.mjs  desktop-development.mjs  windows-signing.mjs  windows-signing.test.mjs
