[package]
name = "glacial"
version = "0.6.4"
description = "Glacial by Icefields, a local-first project safety dashboard"
authors = ["Icefields"]
homepage = "https://icefields.dev"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
tauri = { version = "=2.11.5", features = [] }
tauri-plugin-single-instance = "=2.4.2"
tauri-plugin-shell = "=2.3.5"
serde_json = "=1.0.150"
windows-sys = { version = "=0.61.2", features = [
  "Win32_Foundation",
  "Win32_Security_Cryptography",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
] }

[patch.crates-io]
glib = { path = "../../third_party/rust/glib-0.18.5-patched" }
